--- a/styles.css
+++ b/styles.css
@@ -308,6 +308,89 @@ body {
   margin-bottom: .25em;
 } 
 
+
+
+.project__card{
+  width: 272px;
+  height:400px;
+  border: 2px solid var(--brand-key);
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.project__card__background {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  background-color: black;
+  background-image: url('public/image/longhoobank.png');
+  background-position: top;
+  background-size: cover;
+  transition: all .5s;
+}
+
+.project__card__background::before{
+  content: '';
+  display: none;
+  height: 100%; 
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+   background-color: rgba(52, 73, 94, 0.90);
+}
+
+.project__card__content{
+  display: none;
+  color: var(--text-light);
+  padding: 20% 20%;
+  position: absolute;
+}
+
+.project__card:hover .project__card__background,
+.project__card:focus .project__card__background {
+  transform: scale(1.2);
+}
+
+.project__card:hover .project__card__background::before,
+.project__card:focus .project__card__background::before {
+  display: block;
+}
+
+.project__card:hover .project__card__content,
+.project__card:focus .project__card__content {
+  display: block;
+}
+
+.project__card__text {
+  font-size: .75rem;
+}
+
+.project-text__link {
+  position: relative;
+  font-size: 1.1em;
+  display: block;
+  margin-bottom: 0.5em;
+  text-decoration: none;
+  color: inherit;
+  padding: 1em;
+  background: linear-gradient(
+    90deg,
+    rgba(70, 143, 210, 1) 1%,
+    rgba(70, 143, 210, 0) 1%
+  );
+  transition: 2s ease-in;
+}
+.project-text__link:hover {
+  background: linear-gradient(
+    90deg,
+    rgba(70, 143, 210, 1) 10%,
+    rgba(70, 143, 210, 0) 10%
+  );
+}
+
+
 /* -------------------- */
 /* Media Queries */
 /* -------------------- */
@@ -461,28 +544,7 @@ body {
   margin-bottom: 1em;
 }
 
-.project-text__link {
-  position: relative;
-  font-size: 1.1em;
-  display: block;
-  margin-bottom: 0.5em;
-  text-decoration: none;
-  color: inherit;
-  padding: 1em;
-  background: linear-gradient(
-    90deg,
-    rgba(70, 143, 210, 1) 1%,
-    rgba(70, 143, 210, 0) 1%
-  );
-  transition: 2s ease-in;
-}
-.project-text__link:hover {
-  background: linear-gradient(
-    90deg,
-    rgba(70, 143, 210, 1) 10%,
-    rgba(70, 143, 210, 0) 10%
-  );
-}
+
 
 #projects {
   flex-direction: column;
