--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,16 @@ body {
 }
 
 .section__container {
+  /* min-height: 100vh; */
+  display: flex;
+  width: 85%;
+  max-width: 1500px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+    margin-bottom: 2rem;
+}
+.section__container--hero {
   min-height: 100vh;
   display: flex;
   width: 85%;
@@ -127,6 +137,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
 }
 
 .highlight{
@@ -145,7 +156,7 @@ body {
   position: relative;
   font-weight: bolder;
   font-size: 3rem;
-  margin: 3.5rem 0 2.5rem 0;
+  margin: 1rem 0 2.5rem 0;
   z-index: 1;
 }
 
@@ -163,6 +174,7 @@ body {
 .split {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .split__div {
@@ -170,6 +182,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 2rem;
 }
 
 /* -------------------- */
@@ -264,7 +277,7 @@ body {
 .about__image {
   width: 50%;
   margin-bottom: 1rem;
-  max-width: 400px;
+  max-width: 200px;
 }
 
 .technologies {
@@ -273,12 +286,15 @@ body {
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
+  width: 100%;
   max-width: 500px;
 }
 
 .technologies__row{
   display: flex;
   flex-direction: column;
+  margin: 0 1em;
+  width: 20%;
 }
 
 .technologies__item{
@@ -292,17 +308,14 @@ body {
   padding: .25em .25em
 }
 
-
-
 .technologies__item__image {
-  width: 24px;
-  height: 24px;
+  width: 50%;
   margin-bottom: .25em;
 }
 
  .technologies__item--text {
-  line-height: .75em;
-  font-size: 0.50em;
+  line-height: .75rem;
+  font-size: 0.50rem;
   font-weight: 600;
   color: white;
   margin-bottom: .25em;
@@ -389,7 +402,17 @@ body {
 /* -------------------- */
 /* Media Queries */
 /* -------------------- */
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 768px) {
+ .technologies__item--text {
+  line-height: 1rem;
+  font-size: .75rem;
+  font-weight: 600;
+  color: white;
+  margin-bottom: .25em;
+} 
+}
+
+@media only screen and (min-width: 992px) {
   .header {
   font-size: 1.5rem;
 }
@@ -402,11 +425,35 @@ body {
   flex-direction: row;
 }
 
+.split__div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+width:100%;
+}
+
+
 .hero-text {
   font-size: 2.5rem;
   font-weight: 350;
   line-height: 3rem;
 }
+
+
+
+
+.technologies {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 500px;
+}
+
+
 }
 
 
