--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@
   margin: 0;
 }
 
-
 /* Prevent font size inflation */
 html {
   -moz-text-size-adjust: none;
@@ -19,8 +18,16 @@ html {
 }
 
 /* Remove default margin in favour of better control in authored CSS */
-body, h1, h2, h3, h4, p,
-figure, blockquote, dl, dd {
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
   margin-block-end: 0;
 }
 
@@ -37,14 +44,21 @@ body {
 }
 
 /* Set shorter line heights on headings and interactive elements */
-h1, h2, h3, h4,
-button, input, label {
+h1,
+h2,
+h3,
+h4,
+button,
+input,
+label {
   line-height: 1.1;
 }
 
 /* Balance text wrapping on headings */
-h1, h2,
-h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   text-wrap: balance;
 }
 
@@ -62,8 +76,10 @@ picture {
 }
 
 /* Inherit fonts for inputs and buttons */
-input, button,
-textarea, select {
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
 
@@ -127,7 +143,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 .section__container--hero {
   min-height: 100vh;
@@ -137,10 +153,9 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
 }
 
-.highlight{
+.highlight {
   color: var(--brand-key);
 }
 
@@ -221,9 +236,8 @@ body {
 }
 
 .nav__link:hover {
-  color: var(--brand-key)
+  color: var(--brand-key);
 }
-
 
 /* -------------------- */
 /* Hero Styling */
@@ -263,13 +277,13 @@ body {
 }
 .hero__cta:hover {
   background-color: var(--brand-key);
-  color: var(--text-light)
+  color: var(--text-light);
 }
 
 .hero__cta__icon {
   max-width: 1.25rem;
   max-height: 1.25rem;
-} 
+}
 
 /* -------------------- */
 /* About Styling */
@@ -280,7 +294,7 @@ body {
   max-width: 200px;
 }
 
-.about__text{
+.about__text {
   max-width: 60ch;
 }
 .technologies {
@@ -293,14 +307,14 @@ body {
   max-width: 500px;
 }
 
-.technologies__row{
+.technologies__row {
   display: flex;
   flex-direction: column;
   margin: 0 1em;
   width: 20%;
 }
 
-.technologies__item{
+.technologies__item {
   display: flex;
   flex-direction: column;
   border-image: var(--gradient);
@@ -308,21 +322,21 @@ body {
   border-style: solid;
   align-items: center;
   margin-bottom: 1rem;
-  padding: .25em .25em
+  padding: 0.25em 0.25em;
 }
 
 .technologies__item__image {
   width: 50%;
-  margin-bottom: .25em;
+  margin-bottom: 0.25em;
 }
 
- .technologies__item--text {
-  line-height: .75rem;
-  font-size: 0.50rem;
+.technologies__item--text {
+  line-height: 0.75rem;
+  font-size: 0.5rem;
   font-weight: 600;
   color: white;
-  margin-bottom: .25em;
-} 
+  margin-bottom: 0.25em;
+}
 
 /* -------------------- */
 /* Projects */
@@ -339,20 +353,20 @@ body {
 
 .project__image {
   margin-bottom: 1rem;
-  border-radius:  15px 15px 0px 0px;
+  border-radius: 15px 15px 0px 0px;
 }
 
-.project__text{
+.project__text {
   padding: 0 1em;
 }
 
 .project__title {
   font-size: 1.25rem;
   font-weight: bold;
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
 
-.project__description{
+.project__description {
   margin-bottom: 1rem;
 }
 
@@ -365,7 +379,7 @@ body {
   padding-top: 2rem;
 }
 .project__cta:hover {
-  color: var(--brand-key)
+  color: var(--brand-key);
 }
 .project__cta + .project__cta {
   padding-top: 0;
@@ -375,11 +389,10 @@ body {
 /* -------------------- */
 /* Contact */
 /* -------------------- */
-.contact__text{
+.contact__text {
   max-width: 50ch;
   margin-bottom: 1rem;
 }
-
 
 /* -------------------- */
 /* Footer Queries */
@@ -419,449 +432,56 @@ body {
 /* Media Queries */
 /* -------------------- */
 @media only screen and (min-width: 768px) {
- .technologies__item--text {
-  line-height: 1rem;
-  font-size: .75rem;
-  font-weight: 600;
-  color: white;
-  margin-bottom: .25em;
-} 
+  .technologies__item--text {
+    line-height: 1rem;
+    font-size: 0.75rem;
+    font-weight: 600;
+    color: white;
+    margin-bottom: 0.25em;
+  }
 
-.card__container{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
+  .card__container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
 }
 
 @media only screen and (min-width: 992px) {
   .header {
-  font-size: 1.5rem;
-}
-  .section-container {
-  width: 80%;
-  max-width: 1500px;
-}
-
-.split{
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-between;
-}
-
-.split__div {
-  display: flex;
-  flex-direction: column;
-width:100%;
-}
-
-
-
-.hero-text {
-  font-size: 2.5rem;
-  font-weight: 350;
-  line-height: 3rem;
-}
-
-
-
-
-.technologies {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-  width: 100%;
-  max-width: 500px;
-}
-
-
-}
-
-
-/* .footer__text {
-  /* font-size: 1rem;
-}
-
-
-
-.contact--text {
-  font-weight: 300;
-  font-size: 1rem;
-  line-height: 1.75rem;
-  margin-bottom: 2rem;
-  max-width: 85ch;
-}
-
-
-*/ */ */
-
-/* || header/navbar styling || */
-/* .navbar__list--item + .navbar__list--item {
-  margin-left: 1rem;
-} */ */
-
-
-/* || Contact Styling || */
-/* .form__input {
-  background-color: rgb(40, 40, 40);
-  border: none;
-  color: white;
-  font-family: 'Playfair Display', serif;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
-  font-size: 1rem;
-  margin: 0.125rem 0;
-  padding: 0.25rem 0.5em;
-  resize: none;
-  width: 100%;
-}
-
-.contact__cta {
-  border: 3px solid var(--brand-key);
-  color: var(--brand-key);
-  cursor: pointer;
-  margin-top: 1em;
-  padding: 0.25em 1em;
-  text-decoration: none;
-  transition: 1s;
-}
-
-.contact__cta:hover {
-  background-color: var(--brand-key);
-  color: white;
-  fill: white;
-}
-
-.ml-1 {
-  margin-left: 1em;
-} */ */
-
-/* || Footer Styling || */
-/* .footer {
-  height: 10rem;
-  background-color: rgb(40, 40, 40);
-  align-items: center;
-  justify-content: center;
-}
-
-.footer__image {
-  height: 64px;
-  width: 64px;
-}
-
-.footer__links {
-  margin-bottom: 1em;
-}
-
-.footer__link {
-  text-decoration: none;
-}
-.footer__link + .footer__link {
-  margin-left: 1em;
-}
-
-
-
-#hero {
-  z-index: 1;
-}
-
-.project {
-  margin-bottom: 1em;
-  margin: 2em 2em;
-  max-width: 20rem;
-  background: rgba(40, 40, 40, 0.7);
-  transition: 2.5s;
-  overflow: hidden;
-  -webkit-filter: grayscale(20%); /* Safari 6.0 - 9.0 */
-  /* filter: grayscale(20%);
-}
-
-.project-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  flex-direction: column;
-  position: relative;
-  align-items: center;
-
-  z-index: 1;
-}
-
-.project:hover {
-  border-radius: 3em 1.5em;
-  -webkit-filter: none; /* Safari 6.0 - 9.0 */
-  /* filter: none;
-} */
-/* .project-text { */
-  /* padding: 1em;
-} */ */
-
-/* .project-text__title {
-  font-size: 2rem;
-  padding-top: 0.25em; */
-  /* padding-bottom: 0.5em;
-}
-.project-text__description {
-  font-size: 1rem;
-  margin-bottom: 1em;
-}
-
-
-
-#projects {
-  flex-direction: column;
-} */ */
-
-/* ------------------------------ */
-/* || XSmall Screen Break || */
-/* ------------------------------ */
-
-/* @media only screen and (max-width: 400px) {
-  .technologies__item {
-    padding: 0.25em 0.2em;
-  }
-  .project-card-container {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .technologies__item__image {
-    width: 24px;
-    height: 24px;
-  }
-  .technologies__item--text {
-    font-size: 0.5rem;
-  }
-} */
-
-/* ------------------------------ */
-/* || Small Screen Break || */
-/* ------------------------------ */
-/* @media only screen and (min-width: 600px) { */
-  /* typography */
-
-  /* .footer__text {
-    font-size: 1rem;
-  } */
-
-  /* || header/navbar styling || */
-  /* .navbar {
-    width: 50%;
-  } */
-
-  /* || About Styling || */
-  /* .about__image {
-    width: 40%;
-  }
-
-  .technologies {
-    justify-content: space-around;
-  }
-
-  .technologies__item {
-    padding: 0.25em 1.25em;
-    border-width: 3px;
-  } */
-
-  /* .technologies__item__image {
-    width: 48px;
-    height: 48px;
-  } */
-
-  /* || Contact Styling || */
-  /* .form__input {
-    font-size: 1.25rem;
-    margin: 0.25em 0;
-    padding: 0.25em 0.5em;
-  } */
-
-  /* || Footer Styling || */
-  /* .footer__image {
-    height: 64px;
-    width: 64px;
-  }
-} */
-
-/* ------------------------------ */
-/* || Medium Screen Break || */
-/* ------------------------------ */
-/* @media only screen and (min-width: 900px) {
- 
-  }
-
-  .section {
-    background-color: rgb(26, 26, 26);
-    margin-bottom: 4rem;
-  } */
-
-  /* typography */
-  /* .cta__text {
     font-size: 1.5rem;
   }
-
-  .footer__text {
-    font-size: 1rem;
+  .section-container {
+    width: 80%;
+    max-width: 1500px;
   }
 
-  .hero__text {
-    font-size: 3.5rem;
-    line-height: 4.5rem;
+  .split {
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
   }
 
-  .navbar--text {
-    font-size: 1.25rem;
+  .split__div {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
   }
 
-  .navbar__list--item + .navbar__list--item {
-    margin-left: 2rem;
-  }
-
-  .section--text {
-    font-weight: 300;
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .technologies__item--text {
-    font-size: 1rem;
-    font-weight: 400;
-  }
-
-  /* || header/navbar styling || */
-  /* .navbar {
-    width: 90%;
-  }
-
-  .navabr {
-    justify-content: flex-end;
-  } */ */
-
-  /* || About Styling ||
-  .about__image { */
-    /* width: 35%;
+  .hero-text {
+    font-size: 2.5rem;
+    font-weight: 350;
+    line-height: 3rem;
   }
 
   .technologies {
-    justify-content: space-evenly;
-    max-width: 700px;
-  }
-
-  .technologies__item {
-    padding: 1em 2.25em;
-  }
-
-  .technologies__item__image {
-    width: 64px;
-    height: 64px;
-  } */
-
-  /* || Contact Styling || */
-  /* .form__input {
-    font-size: 1rem;
-    margin: 0.125rem 0;
-    padding: 0.25rem 0.5em;
-    resize: none;
-    width: 100%;
-  } */
-
-  /* || Footer Styling || */
-  /* .footer {
-    height: 10rem;
-    background-color: rgb(40, 40, 40);
-    align-items: center;
-    justify-content: center;
-  } */
-/* 
-  .footer__image {
-    height: 64px;
-    width: 64px;
-  }
-} */
-
-/* .split-divs {
-  width: 100%;
-  justify-content: space-between;
-} */
-
-/* .project-container {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-} */
-
-/* .project-card-container {
-  display: flex;
-  flex-direction: row;
-} */
-
-/* ------------------------------ */
-/* || large display break|| */
-/* ------------------------------ */
-/* @media only screen and (min-width: 1200px) {
-  .split-divs {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-  } */
-
-  /* || About Styling || */
-/* 
-  .technologies__item {
-    padding: 0.5rem 0.75rem;
-  }
-
-  .technologies__item__image {
-    width: 36px;
-    height: 36px;
-  } */
-
-  /* || Contact Styling || */
-  /* .form__input { */
-    /* background-color: rgb(40, 40, 40);
-    border: none;
-    color: white;
-    font-family: 'Playfair Display', serif;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    font-size: 1rem;
-    margin: 0.125rem 0;
-    padding: 0.25rem 0.5em;
-    resize: none;
-    width: 100%;
-  } */
-
-  /* || Footer Styling || */
-  /* .footer {
-    height: 10rem;
-    background-color: rgb(40, 40, 40);
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: center;
-  } */
-
-  /* .footer__image {
-    height: 64px;
-    width: 64px;
-  } */
-
-  /* #canvas1 {
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgb(26, 26, 26);
-  } */
-/* 
-  #hero {
-    z-index: 1;
-  } */
-
-  /* .split {
-    max-width: 40%;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 500px;
   }
-} */ */ */
+}
